--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.1.3",
+    "firebase": "^6.2.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^2.2.7",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
+    "sweet-alert": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
