--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "sweetalert2": "^8.13.3"
+    "sweetalert2": "^8.13.3",
   },
   "scripts": {
     "start": "react-scripts start",
