--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.1.3",
     "emailjs-com": "^2.3.2",
     "firebase": "^6.2.4",
+    "material-ui-popup-state": "^1.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^2.2.7",
